--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 webbrowser = "0.5.5"
 tide = "0.14.0"
 async-std = { version = "1.6.0", features = ["attributes"] }
+futures = "0.3.7"
