--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 webbrowser = "0.5.5"
-tide = "0.14.0"
-async-std = { version = "1.6.0", features = ["attributes"] }
+async-h1 = "2.1.4"
+async-std = { version = "1.7.0", features = ["attributes"] }
 futures = "0.3.7"
+http-types = "2.7.0"
